Fix long link overflow

--- a/Criollo Web/Public/blog.styl
+++ b/Criollo Web/Public/blog.styl
@@ -96,6 +96,7 @@ body.blog
         font-size 0.9em
         font-style italic
         line-height 1.9em
+        box-sizing border-box
 
         @media screen and (max-width: phone-cutoff)
           margin-left 0 !important
